# pikachu_costume_m4

./: .gitignore  Cargo.toml  LICENSE  README.md  dump_to_csv.py  gpiochip_reset_to_bootloader.sh  memory.x  pikachu_motion_analysis.ipynb  pikachu_motion_analysis2.ipynb  pikachu_motion_analysis3.ipynb
.cargo/: config
circuitpython/: code_cp_test_lights.py
src/: accel_dumper.rs  main.rs  mpu6050.rs  strip_test.rs
src/mpu6050/: dmp_firmware.rs
