[package]
name = "pikachu_costume_m4"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"


[[bin]]
name = "accel_dumper"
path = "src/accel_dumper.rs"


[[bin]]
name = "strip_test"
path = "src/strip_test.rs"


# for cargo flash
[package.metadata]
chip = "ATSAMD51J19A"

[dependencies.cortex-m]
version = "0.7.7"

[dependencies.cortex-m-rt]
version = "0.7"

[dependencies.atsamd-hal]
version = "0.16.0"
default-features = true
features = ["samd51j-rt", "samd51j", "samd51", "dma", "unproven"]

[dependencies.feather_m4]
git = "https://github.com/atsamd-rs/atsamd" 
features = ["unproven", "rt"]

[dependencies]
panic-halt = "0.2"
panic-persist = "0.3"
smart-leds = "0.3"
ws2812-timer-delay = "0.3"
heapless = "0.7.16"
micromath = "2.0.0"
fugit = "0.3.7"

[profile.release]
debug = true
lto = true
opt-level = "s"